syntax = "proto3";

package chain_gateway;

option go_package = "internal/client/chain_gateway;chain_gateway";

// Reusable record for content entries
message ContentRecord {
    string uid = 1;                                // Unique identifier to bind transaction to page version
    string url = 2;                                // Page URL
    string content_hash = 3;                       // SHA-256 hash of page content
    uint64 content_length = 4;                     // Size of original content in bytes
    uint32 version = 5;                            // Schema version number
}

// Request to store a content record
message StoreRequest {
    ContentRecord record = 1;
}

// Response after storing a record
message StoreResponse {
    bool success = 1;
    string transaction_id = 2;  // On-chain transaction ID
    string account_address = 3; // Solana account address where proof is stored
}

service ChainGateway {
    // Store a new content record on-chain
    rpc Store(StoreRequest) returns (StoreResponse);
}

